# Triangulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.cpp  common.hpp  lexTri.cpp  lexTri.hpp  main.cpp  main.cu  makefile
common/: CMakeLists.txt  common.cpp  common.hpp
cones/: .gitignore  P10  P11  P12  P13  P14  P15  P3  P4  P5  P6  P7  P8  P9  genBirkhoff.py  genCubeFacets.py  genCubeVerts.py  genCyclic.py  genGC.py
cudaCommon/: CMakeLists.txt  cudaHelpers.cu  cudaHelpers.hpp
triangulators/: CMakeLists.txt  lexTriangulator.cpp  lexTriangulator.cu  lexTriangulator.hpp  triangulator.hpp
